# android

./: .gitignore  readme  readme.md
Galacticon/app/: build.gradle  proguard-rules.pro
ImagePicker/app/: proguard-rules.pro
OpenGLWindow/app/: build.gradle
RecyclerView/app/: build.gradle
Service/service/: proguard-rules.txt
java/BarPlot/app/: build.gradle
java/Galacticon/: readme
java/ImagePicker/app/: build.gradle
java/MinimalGL/app/: build.gradle
java/MultiTouchDemo1/app/: build.gradle
java/TouchDemo1/app/: build.gradle
java/UseGL/app/: build.gradle
java/jeromq/app/: build.gradle
kotlin/ActionSend/app/: build.gradle
kotlin/AndroidPlot/app/: build.gradle
kotlin/BarPlot/app/: build.gradle
kotlin/CombinedPlot/app/: build.gradle
kotlin/CustomView/app/: build.gradle
kotlin/DatePicker/app/: build.gradle
kotlin/DatePickerDialog/app/: build.gradle
kotlin/EmptyListPlaceholder/app/: build.gradle
kotlin/ExternalStorage/: readme.md
kotlin/ExternalStorage/app/: build.gradle
kotlin/FXPlot/app/: build.gradle
kotlin/GridView/app/: build.gradle
kotlin/HorizontalRecyclerView/app/: build.gradle
kotlin/ImageView/app/: build.gradle
kotlin/ListView/app/: build.gradle
kotlin/Location/: readme.md  settings.gradle.kts
kotlin/Location/app/: build.gradle.kts
kotlin/LocationCoro/: readme.md  settings.gradle.kts
kotlin/LocationCoro/app/: build.gradle.kts
kotlin/NavigationDrawer/app/: build.gradle
kotlin/NotificationDemo/app/: build.gradle
kotlin/NotificationProgress/app/: build.gradle
kotlin/Preferences/app/: build.gradle
kotlin/RecyclerView/app/: build.gradle
kotlin/RecyclerViewDragandDrop/app/: build.gradle
kotlin/RecyclerViewUpdate/app/: build.gradle
kotlin/SDCardDCIM/: readme.md  settings.gradle
kotlin/SDCardDCIM/app/: build.gradle
kotlin/SQLiteDatabase/app/: build.gradle
kotlin/SeekBar/app/: build.gradle
kotlin/TabLayout/app/: build.gradle
kotlin/TableLayout/app/: build.gradle
kotlin/UiThreadAccessWithoutActivity/app/: build.gradle
kotlin/ViewModel/app/: build.gradle
kotlin/hellomap/: readme.md
kotlin/hellomap/app/: build.gradle
kotlin/mapbox/: readme.md
kotlin/mapbox/hellomap/: settings.gradle
kotlin/mapbox/location/: readme.md
kotlin/mapbox/marker/: readme.md  settings.gradle
ndk/: upload-assets.sh
ndk/Animation/app/: build.gradle
ndk/Animation/native/: CMakeLists.txt  animation_md5.cpp  resource.cpp  resource.hpp  upload-assets.sh
ndk/Animation/native/libs/gl/: CMakeLists.txt
ndk/Animation/native/libs/pix/: CMakeLists.txt
ndk/AntApp/: build.xml  readme
ndk/Bullet/app/: build.gradle
ndk/Bullet/native/: CMakeLists.txt  scene.cpp
ndk/CMake/app/: build.gradle
ndk/CustomNative/: CMakeLists.txt  main.cpp
ndk/CustomNative/android/: AndroidManifest.xml  build.gradle
ndk/CustomNative/android/src/org/example/: MainActivity.java
ndk/Earth/: .gitignore
ndk/Earth/app/: build.gradle
ndk/Earth/native/: CMakeLists.txt  android_window.cpp  build-arm.sh  build.sh  earth_scene.cpp  upload-assets.sh  window.cpp
ndk/Earth/native/gl/gles2/: touch_joystick_gles2.hpp
ndk/Earth/native/libs/androidgl/: CMakeLists.txt
ndk/Earth/native/libs/gl/: CMakeLists.txt  window.hpp
ndk/Earth/native/libs/gl/gles2/: default_shader_gles2.cpp  texture_gles2.cpp  texture_loader_gles2.cpp  touch_joystick_gles2.cpp
ndk/Earth/native/libs/gles2/: CMakeLists.txt  touch_joystick_gles2.cpp
ndk/Earth/native/libs/pix/: CMakeLists.txt
ndk/EmbeddingNative/: AndroidManifest.xml  build.gradle  project.properties
ndk/EmbeddingNative/jni/: Android.mk  Application.mk  wrappers.cpp
ndk/GradleApp/: build.gradle  readme
ndk/HelloJni/app/: build.gradle
ndk/ImageMagick/app/: build.gradle
ndk/ImageMagick/native/: CMakeLists.txt  build-arm.sh  build-x86.sh  imagick.cpp
ndk/ImageMagick/native/libs/gl/: CMakeLists.txt
ndk/ImageMagick/native/libs/gl/gles2/: program_gles2.cpp  texture_gles2.hpp
ndk/ImageMagick/native/libs/tools/: CMakeLists.txt
ndk/LoadRes/app/: build.gradle
ndk/LoadingJpeg/app/: build.gradle
ndk/LoadingJpeg/native/: CMakeLists.txt  build-x86.sh  scene.cpp
ndk/LoadingPng/app/: build.gradle
ndk/LoadingPng/app/src/main/native/: CMakeLists.txt  renderer_wrapper.c
ndk/LoadingPng/app/src/main/native/core/: asset_utils.c  asset_utils.h  buffer.c  buffer.h  config.h  game.c  game.h  image.c  image.h  shader.c  shader.h  texture.c  texture.h
ndk/LoadingPng/app/src/main/native/platform/: platform_asset_utils.c  platform_asset_utils.h  platform_file_utils.h  platform_log.c  platform_log.h  platform_macros.h
ndk/LoadingPng/native/: CMakeLists.txt  build-arm.sh  build-x86.sh  renderer_wrapper.cpp  upload-assets.sh
ndk/LoadingPng/native/libs/gl/gles2/: texture_loader_gles2.cpp
ndk/NativeLog/app/: build.gradle
ndk/NativeLog/native/: CMakeLists.txt  android_log_streambuf.cpp
ndk/OpenAL/: readme
ndk/OpenAL/android/: .gitignore  AndroidManifest.xml
ndk/ReadFile/app/: build.gradle
ndk/ReadFile/native/: CMakeLists.txt  android-x86.cmake  load.cpp
ndk/ReleaseGL/app/: build.gradle
ndk/ReleaseGL/native/: CMakeLists.txt  scene.cpp
ndk/Shapes/app/: build.gradle
ndk/Shapes/native/: CMakeLists.txt  android-arm.cmake  build-arm.sh  build-x86.sh  scene.cpp
ndk/Terminate/app/: build.gradle
ndk/Terminate/native/: CMakeLists.txt  scene.cpp
ndk/TexturedAnimation/: local.properties
ndk/TexturedAnimation/native/: animation_md5.cpp  upload-assets.sh
ndk/Touch/app/: build.gradle
ndk/Touch/native/: scene.cpp
ndk/TriangleGles2/: readme
ndk/TriangleGles2/app/: build.gradle
ndk/TriangleGles2/native/: CMakeLists.txt  scene.cpp  x86_android.cmake
ndk/VorbisPlay/: CMakeLists.txt  build-arm.sh  build.sh  main.cpp
ndk/VorbisPlay/android/: AndroidManifest.xml
ndk/VorbisPlay/android/src/org/example/: MainActivity.java
ndk/WaveformPlay/: build.sh  main.cpp
ndk/main/: android-x86.cmake
ndk/scripts/: android-arm-toolchain.sh  android-armeabi-toolchain.sh  android-armv7a-toolchain.sh
ndk/scripts/SDL2-2.0.4/: CMakeLists.txt  android-x86.cmake  build.sh
(+664 files in other folders)
